--- a/pages/addWindow.html
+++ b/pages/addWindow.html
@@ -18,22 +18,6 @@
 
 
 
-    <script>
-        const electron = require ('electron');
-        const {ipcRenderer} = electron;
-        const form = document.querySelector('form');
-        form.addEventListener('submit', submitForm);
-
-        function submitForm(e)
-        {
-            e.preventDefault();
-            const item = document.querySelector('#item').value;
-            ipcRenderer.send('item:add', item);
-
-
-        }
-
-
-    </script>
+    <script src="./script/addWindow.js"></script>
 </body>
 </html>
